unpackaged/main/default/objects/d_wh__Callout_JSON_Body_Node__c/d_wh__Callout_JSON_Body_Node__c.object-meta.xml
<CustomObject>
    <label>Callout JSON Body Node</label>
    <nameField>
        <label>Node Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callout JSON Body Nodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>