unpackaged/main/default/objects/d_wh__Callout_JSON_Body_Node__c/fields/d_wh__Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Apex_Class_Name__c</fullName>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>