unpackaged/main/default/objects/d_wh__Callout_JSON_Body_Node__c/fields/d_wh__Blob_Format__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Blob_Format__c</fullName>
    <label>Blob Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base64</fullName>
            </value>
            <value>
                <fullName>Hex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>