unpackaged/main/default/objects/d_wh__Callout_JSON_Body_Node__c/fields/d_wh__Node_Type__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Node_Type__c</fullName>
    <label>Node Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Array</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>