unpackaged/main/default/objects/d_wh__Callout_JSON_Body_Node__c/fields/d_wh__Split_Character__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Split_Character__c</fullName>
    <label>Split Character</label>
    <length>8</length>
    <type>Text</type>
</CustomField>